# corso-ateneo-algorand

./: .gitignore  pyproject.toml
ateneo-impresa/: main.py
ateneo-impresa/contracts/: approval.teal
js/: index.js  package-lock.json  package.json
