[tool.poetry]
name = "ateneo-impresa"
version = "0.1.0"
description = ""
authors = ["BigTias <matias.torres@knobs.it>"]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^21.4.0"
cffi = "^1.15.0"
iniconfig = "^1.1.1"
msgpack = "^1.0.3"
packaging = "^21.3"
pluggy = "^1.0.0"
py = "^1.11.0"
py-algorand-sdk = "^1.11.0"
pycparser = "^2.21"
pycryptodomex = "^3.14.1"
PyNaCl = "^1.5.0"
pyparsing = "^3.0.7"
pyteal = "^0.13.0"
pytest = "^7.1.1"
six = "^1.16.0"
toml = "^0.10.2"
pydantic = "^1.9.0"
python-dotenv = "^0.20.0"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
